# puddle-farm-embeds

./: Cargo.toml  README.md  nginx.conf.example
src/: main.rs
