[package]
name = "embeds-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.9", features = ["macros"] }
tokio = { version = "1.42.0", features = ["time", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.12", features = ["json"] }
serenity = "0.12"